# crate-wso2-project

./: Cargo.toml  README.md
fragments/fragment-Choreo Connect-Docker/: docker-compose.yaml
fragments/fragment-Choreo Connect-Docker/httpbin/: api.yaml  api_meta.yaml
fragments/fragment-Choreo Connect-Docker/httpbin/Definitions/: swagger.yaml
fragments/fragment-Choreo Connect-Docker/interceptor/: Ballerina.toml  Dependencies.toml  interceptor-service-open-api_service.bal  types.bal
fragments/fragment-Micro Integrator/: Dockerfile  Makefile  README.md
fragments/fragment-Micro Integrator-Docker/: docker-compose.yml  pom.xml
fragments/fragment-Micro Integrator-Docker/mi-home/conf/: deployment.toml  log4j2.properties
fragments/fragment-Micro Integrator-Docker/mi-home/conf/sslprofiles/: senderprofiles.xml
fragments/fragment-Micro Integrator-Docker/src/main/registry-resources/: artifact.xml
fragments/fragment-Micro Integrator-Docker/src/main/synapse-config/: artifact.xml
fragments/fragment-Micro Integrator/mi-home/carbonapps/: soap2rest_1.0.0.car
fragments/fragment-Micro Integrator/mi-home/conf/: log4j2.properties
fragments/fragment-Micro Integrator/src/main/synapse-config/api/: HelloWorld.xml
src/: lib.rs  main.rs  template.rs
