[package]
name = "create-wso2-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = "4.3.19"
dialoguer = "0.10.4"
rust-embed = { version = "6.8", features = [ "compression", "interpolate-folder-path" ] }
